<resources>
    <string name="app_name">skinEnthusiast</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_skincam">SkinCam</string>
    <string name="title_profile">Profile</string>
    <string name="start">Start</string>
    <string name="welcome_to">Welcome to</string>
    <string name="app_name_full">Skin Enthusiast</string>
    <string name="we_know_what_is_best_for_you">We know what is best for you!</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="didn_t_have_an_account">Didn\'t have an account?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="homepage">Homepage</string>
    <string name="let_us_know_about_skin_type">Let Us Know About Skin Type</string>
    <string name="dry_skin">Dry Skin</string>
    <string name="the_right_skincare_products_will_keep_your_skin_looking_healthy_smooth_hydrated_and_protected_from_environmental_stressors">The right skincare products will keep your skin looking healthy, smooth, hydrated and protected from environmental stressors.</string>
    <string name="normal_skin">Normal Skin</string>
    <string name="dry_skin_is_dry_and_lacks_moisture_the_right_skincare_products_will_nourish_your_skin_repair_its_critical_barrier_and_prevent_moisture_loss">Dry skin is dry and lacks moisture. The right skincare products will nourish your skin, repair its critical barrier and prevent moisture loss.</string>
    <string name="acne_prone_skin">Acne-prone Skin</string>
    <string name="skin_type_that_tends_to_break_out_easily_due_to_clogged_pores_cleanse_with_a_mild_non_drying_soap_and_consider_using_a_cleanser_with_salicylic_acid_or_benzoyl_peroxide_if_your_skin_is_oily">skin type that tends to break out easily due to clogged pores. Cleanse with a mild, non-drying soap, and consider using a cleanser with salicylic acid or benzoyl peroxide if your skin is oily.</string>
    <string name="skincam_copytext">Get the best care recommendations\nto realize your healthy skin\njust by taking a selfie</string>
    <string name="face_scan_result">Face Scan Result</string>
    <string name="face_analyst">Face Analyst</string>
    <string name="our_recommendation">Our Recommendation</string>
    <string name="you_can_use">you can use :</string>
    <string name="ingredients">Ingredients :</string>
    <string name="benefit">Benefit :</string>
    <string name="usage">Usage :</string>
    <string name="profile">Profile</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_your_photo">Add Your Photo</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="log_out">Log Out</string>
</resources>