<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.editprofile.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="?colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_photo"
            android:layout_marginTop="12dp"
            app:cornerRadius="8dp"
            android:id="@+id/btn_add_photo"/>

        <com.capstone.skinenthusiast.ui.customview.CustomEditTextEmail
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:transitionName="email" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/form_bg"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:transitionName="name" />

        <com.capstone.skinenthusiast.ui.customview.CustomEditTextPassword
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:transitionName="password" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_marginTop="12dp"
                app:cornerRadius="8dp"
                android:id="@+id/btn_save"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="@string/back"
                android:layout_marginTop="12dp"
                app:cornerRadius="8dp"
                android:id="@+id/btn_back"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>